17: add config apply cmd

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ include_dir = "0.7"
 liquid = "0.26"
 tar = "0.4"
 flate2 = "1"
+serde_yaml = "0.9"
+serde_json = "1"
 
 [[bin]]
 name = "cargo-pike"
