--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ tar = "0.4"
 flate2 = "1"
 serde_yaml = "0.9"
 serde_json = "1"
+signal-hook = "0.3.17"
+ctrlc = "3.2"
+lazy_static = "1.4"
 
 [[bin]]
 name = "cargo-pike"
