--- a/plugin_template/Cargo.toml
+++ b/plugin_template/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "{{ project_name }}"
+name = "my_plugin"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-picoplugin = { git = "ssh://git@git.picodata.io/picodata/picodata/picodata.git" } # TODO: change to crates.io
+picodata-plugin = "24.6.1"
 
 [build-dependencies]
 liquid = "0.26"
