--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,9 @@ flate2 = "1"
 serde_yaml = "0.9"
 serde_json = "1"
 ctrlc = "3.2"
-colored = "2.0"
+anyhow = "1.0"
+colog = "1.3.0"
+log = "0.4.22"
 
 [[bin]]
 name = "cargo-pike"
