Support migration variables in topology.toml

--- a/plugin_template/topology.toml
+++ b/plugin_template/topology.toml
@@ -5,3 +5,6 @@ replication_factor = 2
 [[tiers.default.services]]
 name = "main"
 plugin = "{{ project_name }}"
+migration_envs = [
+    { name = "example_name", value = "example_value" },
+]
