--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "picodata-pike"
-version = "0.1.0"
+version = "0.1.0-rc.1"
 edition = "2021"
 license = "BSD-2-Clause"
 authors = ["Evgeniy Mitin <e.mitin@picodata.io>"]
