master: fix gen migrations in manifest template
closes #40

--- a/plugin_template/manifest.yaml.template
+++ b/plugin_template/manifest.yaml.template
@@ -8,6 +8,6 @@ services:
       value: example
 migration:
 {{ "{% for migration in migrations -%}" }}
-    - {{ "{{ migration }}" }}
-{{ "{%- endfor %}" }}
+- {{ "{{ migration }}" }}
+{{ "{% endfor -%}" }}
 
