--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "picodata-pike"
-version = "1.0.0"
+version = "2.0.0-rc1"
 edition = "2021"
 license = "BSD-2-Clause"
 authors = [
