--- a/plugin_template/_Cargo.toml
+++ b/plugin_template/_Cargo.toml
@@ -11,11 +11,11 @@ serde = { version = "1", features = ["derive"] }
 log = "0.4"
 
 [dev-dependencies]
-picodata-pike = { git = "https://github.com/picodata/pike.git", branch = "master" } # TODO: change after publish on crates.io
+picodata-pike = "2.0.0"
 reqwest = { version = "0.12", features = ["blocking"] }
 
 [build-dependencies]
-picodata-pike = { git = "https://github.com/picodata/pike.git", branch = "master" } # TODO: change after publish on crates.io
+picodata-pike = "2.0.0"
 liquid = "0.26"
 fs_extra = "1"
 
