--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ colog = "1.3.0"
 log = "0.4.25"
 fs_extra = "1"
 libc = "0.2.169"
-nix = "0.29.0"
+nix = { version = "0.30" }
 colored = "3"
 rand = "0.9"
 derive_builder = "0.20"
