--- a/plugin_template/_Cargo.toml
+++ b/plugin_template/_Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 resolver = "3"
 
 [dependencies]
-picodata-plugin = "25.1.1"
+picodata-plugin = "=25.1.2"
 serde = { version = "1", features = ["derive"] }
 log = "0.4"
 anyhow = "1.0.98"
